Bug 1666065 - Make ZoomToFocusedInput() handle fixed-pos subframes of the RCD. r=botond

I haven't been able to repro the issue so I'm not quite sure how to test
this...

Differential Revision: https://phabricator.services.mozilla.com/D91307